public/style/style.css
* {
  font-family: Helvetica, sans-serif;
  color: #fff;
}

html,
body {
  height: 100%;
  background-image: url('../images/stars_background.jpg');
  background-color: #000;
}

textarea {
  background-color: black;
}

nav img {
	padding-left: 35px;
	height: 42px;
	margin: 10px;
}

#display_name {
	float: right;
	color: white;
	font-size: 18px;
	margin-top: 20px;
	margin-right: 20px;
}

ul .dropdown-menu {
	color: white;
	background-color: black;
}

.dropdown {
	color: rgb(26, 26, 26);
	float: right;
	margin-top: 15px;
	margin-right: 90px;
	padding-bottom: 18px;
}

.dropdown-menu {
  background-color: black;
}

.dropdown .btn {
	background-color: rgb(26, 26, 26);
	border-color: rgb(26, 26, 26);
}

.glyphicon {
	color: white;
}

nav p {
	color: white;
	font-size: 18px;
	font-weight: bold;
	margin-top: 18px;
	margin-right: 30px;
}

.small {
	color: white;
	font-size: 18px;
	font-weight: normal;
}

#wrap {
  min-height: 100%;
  height: auto;
  margin: 0 auto -60px;
  padding: 0 0 60px;
}

.bg-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.splash-logo {
  width: 300px;
  margin-top: 150px;
}

.members-grid {
  width: 800px;
  display: flex;
}

.members-grid figure{
  flex-direction: row;
}

footer {
  height: 60px;
  background-color: #000;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
}

footer ul{
  list-style: none;
  color: #fff;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
}

footer li {
  margin: 10px;
}

